Fixing rendering issue on mobile - added margin-top to h1

--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -203,9 +203,9 @@ body {
         margin: 2rem auto; } }
   .home-headline {
     font-size: 2.5rem;
-    background-color: orangered; }
+    margin-top: 1.5rem; }
     .home-headline--gradient {
-      background: -webkit-linear-gradient(#441d8c 0%, #546ead 100%);
+      background: linear-gradient(to right, #441d8c 0%, #546ead 100%);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent; }
     @media (min-width: 56.25em) {
@@ -416,7 +416,7 @@ body {
     font-weight: 700;
     margin-top: 1.5rem; }
   .empty-box__text--gradient {
-    background: -webkit-linear-gradient(#441d8c 0%, #546ead 100%);
+    background: linear-gradient(to right, #441d8c 0%, #546ead 100%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent; }
   .empty-box__button {
@@ -458,7 +458,7 @@ body {
     animation-duration: .5s;
     animation-timing-function: ease-out; }
     .snoozed__text--heading {
-      background: -webkit-linear-gradient(#441d8c 0%, #546ead 100%);
+      background: linear-gradient(to right, #441d8c 0%, #546ead 100%);
       -webkit-background-clip: text;
       -webkit-text-fill-color: transparent;
       font-size: 2.5rem;
