--- a/src/sass/abstracts/_mixins.scss
+++ b/src/sass/abstracts/_mixins.scss
@@ -31,8 +31,7 @@
 }
 
 @mixin gradient-text {
-    background: -webkit-linear-gradient($color-violet-dark 0%, $color-blue-dark 100%);
-    //background: linear-gradient(to right, $color-violet-dark 0%, $color-blue-dark 100%);
+    background: linear-gradient(to right, $color-violet-dark 0%, $color-blue-dark 100%);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent; 
 }
